--- a/contract/templates/orcamento_list.html
+++ b/contract/templates/orcamento_list.html
@@ -126,7 +126,8 @@
                                 <th>Ano</th>
                                 <th>Centro</th>
                                 <th>Classe</th>
-                                <th>Valor</th>
+                                <th>Valor original</th>
+                                <th>Valor pós remanejamentos</th>
                                 <th>Ações</th>
                             </tr>
                         </thead>
@@ -137,6 +138,7 @@
                                 <td>{{ orcamento.centro }}</td>
                                 <td>{{ orcamento.get_classe_display }}</td>
                                 <td>{{ orcamento.valor }}</td>
+                                <td>{{ orcamento.valor_total }}</td>
                                 <td>
                                     <a href="{% url 'orcamento_update' orcamento.pk %}" class="btn btn-warning btn-sm">Editar</a>
                                     <a href="{% url 'orcamento_delete' orcamento.pk %}" class="btn btn-danger btn-sm">Deletar</a>
