--- a/dashboard/templates/dashboard_home.html
+++ b/dashboard/templates/dashboard_home.html
@@ -74,6 +74,7 @@
 </nav>
 
 <div class="sidebar">
+    <a href="{% url 'dashboard' %}">Dashboard</a>
     <button class="dropdown-btn">Direção 
         <i class="fa fa-caret-down"></i>
     </button>
@@ -115,6 +116,13 @@
     <div class="dropdown-container">
         <a href="{% url 'colaborador_create' %}">Adicionar Colaborador</a>
         <a href="{% url 'colaborador_list' %}">Lista de Colaboradores</a>
+    </div>
+    <button class="dropdown-btn">Auxilios 
+        <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-container">
+        <a href="{% url 'auxiliocolaborador_create' %}">Adicionar Auxilios</a>
+        <a href="{% url 'auxiliocolaborador_list' %}">Lista de Auxilios</a>
     </div>
 </div>
 
