adição do campo beneficio em auxilios

--- a/auxilios/templates/auxiliocolaborador_detail.html
+++ b/auxilios/templates/auxiliocolaborador_detail.html
@@ -119,6 +119,7 @@
         <p><strong>Beneficiado:</strong> {{ auxilio_colaborador.baneficiado.nome_completo }}</p>
         <p><strong>Orçamento:</strong> {{ auxilio_colaborador.orcamento }}</p>
         <p><strong>Tipo de Auxílio:</strong> {{ auxilio_colaborador.get_tipo_display }}</p>
+        <p><strong>Tipo de Auxílio:</strong> {{ auxilio_colaborador.beneficio }}</p>
         <p><strong>Valor por Parcela:</strong> R$ {{ auxilio_colaborador.valor_parcela }}</p>
         <p><strong>Quantidade de Parcelas:</strong> {{ auxilio_colaborador.qtd_parcelas }}</p>
         <p><strong>Valor Total:</strong> R$ {{ auxilio_colaborador.valor_total }}</p>
