--- a/auxilios/templates/auxiliocolaborador_form.html
+++ b/auxilios/templates/auxiliocolaborador_form.html
@@ -127,6 +127,10 @@
                 {{ form.tipo }}
             </div>
             <div class="form-group">
+                <label for="tipo">Beneficio</label>
+                {{ form.beneficio }}
+            </div>
+            <div class="form-group">
                 <label for="valor_parcela">Valor por Parcela</label>
                 {{ form.valor_parcela }}
             </div>
