--- a/auxilios/templates/auxiliocolaborador_list.html
+++ b/auxilios/templates/auxiliocolaborador_list.html
@@ -140,6 +140,7 @@
                     <th>Beneficiado</th>
                     <th>Orçamento</th>
                     <th>Tipo</th>
+                    <th>Beneficio</th>
                     <th>Valor Parcela</th>
                     <th>Qtd Parcelas</th>
                     <th>Valor Total</th>
@@ -153,6 +154,7 @@
                     <td>{{ auxilio.baneficiado.nome_completo }}</td>
                     <td>{{ auxilio.orcamento }}</td>
                     <td>{{ auxilio.get_tipo_display }}</td>
+                    <td>{{ auxilio.beneficio }}</td>
                     <td>{{ auxilio.valor_parcela }}</td>
                     <td>{{ auxilio.qtd_parcelas }}</td>
                     <td>{{ auxilio.valor_total }}</td>
