--- a/contract/templates/linhaorcamentaria_detail.html
+++ b/contract/templates/linhaorcamentaria_detail.html
@@ -43,46 +43,46 @@
         </div>
         <div class="details-body mt-4">
             <div class="form-group">
-                <label>Classe:</label>
-                <p>{{ linhaorcamentaria.get_classe_display }}</p>
+                <p><strong>Classe:</strong> {{ linhaorcamentaria.get_classe_display }}</p>
             </div>
             <div class="form-group">
-                <label>Custo/Despesa:</label>
-                <p>{{ linhaorcamentaria.get_custo_despesa_display }}</p>
+                <p><strong>Custo/Despesa:</strong> {{ linhaorcamentaria.get_custo_despesa_display }}</p>
             </div>
             <div class="form-group">
-                <label>Centro Custo Gestor:</label>
-                <p>{{ linhaorcamentaria.centro_custo_gestor }}</p>
+                <p><strong>Centro Custo Gestor:</strong> {{ linhaorcamentaria.centro_custo_gestor }}</p>
             </div>
             <div class="form-group">
-                <label>Centro Custo Solicitante:</label>
-                <p>{{ linhaorcamentaria.centro_custo_solicitante }}</p>
+                <p><strong>Centro Custo Solicitante:</strong> {{ linhaorcamentaria.centro_custo_solicitante }}</p>
             </div>
             <div class="form-group">
-                <label>Descrição Resumida:</label>
-                <p>{{ linhaorcamentaria.descricao_resumida }}</p>
+                <p><strong>Descrição Resumida:</strong> {{ linhaorcamentaria.descricao_resumida }}</p>
             </div>
             <div class="form-group">
-                <label>Objeto:</label>
-                <p>{{ linhaorcamentaria.objeto }}</p>
+                <p><strong>Objeto:</strong> {{ linhaorcamentaria.objeto }}</p>
             </div>
             <div class="form-group">
-                <label>Valor Orcado:</label>
-                <p>{{ linhaorcamentaria.valor_orcado }}</p>
+                <p><strong>Valor Orçado:</strong> {{ linhaorcamentaria.valor_orcado }}</p>
             </div>
             <div class="form-group">
-                <label>Status da Linha Orçamentária:</label>
-                <p>{{ linhaorcamentaria.get_status_linha_orcamentaria_display }}</p>
+                <p><strong>Status da Linha Orçamentária:</strong> {{ linhaorcamentaria.get_status_linha_orcamentaria_display }}</p>
             </div>
             <div class="form-group">
-                <label>Status da Contratação:</label>
-                <p>{{ linhaorcamentaria.get_status_contratacao_display }}</p>
+                <p><strong>Status da Contratação:</strong> {{ linhaorcamentaria.get_status_contratacao_display }}</p>
             </div>
             <div class="form-group">
-                <label>Observações:</label>
-                <p>{{ linhaorcamentaria.obs_contrato }}</p>
+                <p><strong>Observações:</strong> {{ linhaorcamentaria.obs_contrato }}</p>
+            </div>
+            <div class="form-group">
+                <p><strong>Valor Remanejado Total:</strong> {{ linhaorcamentaria.valor_remanejado_total }}</p>
+            </div>
+            <div class="form-group">
+                <p><strong>Saldo Orçamentário Pós-Remanejamento:</strong> {{ linhaorcamentaria.saldo_orcamentario_pos_remanejamento }}</p>
+            </div>
+            <div class="form-group">
+                <p><strong>Tempo para Contratação:</strong> {{ linhaorcamentaria.tempo_para_contratacao }}</p>
             </div>
         </div>
+        
         <div class="details-footer mt-4">
             <a href="{% url 'linhaorcamentaria_list' %}" class="btn btn-secondary">Voltar</a>
         </div>
