ajuste em linhaorcamentaria

--- a/contract/templates/linhaorcamentaria_detail.html
+++ b/contract/templates/linhaorcamentaria_detail.html
@@ -81,6 +81,9 @@
             <div class="form-group">
                 <p><strong>Tempo para Contratação:</strong> {{ linhaorcamentaria.tempo_para_contratacao }}</p>
             </div>
+            <div class="form-group">
+                <p><strong>Valor Aprovisionado:</strong> {{ linhaorcamentaria.valor_aprovisionado }}</p>
+            </div>
         </div>
         
         <div class="details-footer mt-4">
