ajuste em model aditivo

--- a/contract/templates/contrato_detail.html
+++ b/contract/templates/contrato_detail.html
@@ -11,7 +11,7 @@
     <h1>Detalhes do Contrato</h1>
     <div class="card">
         <div class="card-header">
-            Número do Protocolo: {{ contrato.numero_protocolo }}
+            Contrato: {{ contrato.numero_protocolo }}
         </div>
         <div class="card-body">
             <p><strong>Linha Orçamentária:</strong> {{ contrato.linha_orcamentaria.descricao_resumida }}</p>
