--- a/contract/templates/contrato_list.html
+++ b/contract/templates/contrato_list.html
@@ -13,7 +13,7 @@
     <table class="table table-striped">
         <thead>
             <tr>
-                <th>Número do Protocolo</th>
+                <th>Contrato</th>
                 <th>Linha Orçamentária</th>
                 <th>Fiscal Principal</th>
                 <th>Fiscal Substituto</th>
