--- a/contract/templates/setor_manage.html
+++ b/contract/templates/setor_manage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gestão de Centros de Custo</title>
+    <title>Gestão de Setores</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -34,8 +34,6 @@
             color: white;
             display: block;
             text-decoration: none;
-            background: none;
-            border: none;
         }
         .sidebar a:hover, .dropdown-btn:hover {
             background-color: #007bff;
@@ -44,23 +42,6 @@
             display: none;
             background-color: #414a4c;
             padding-left: 15px;
-        }
-        .dropdown-container a {
-            padding: 10px 15px;
-            text-align: left;
-            font-size: 18px;
-            color: white;
-            display: block;
-            text-decoration: none;
-            background: none;
-            border: none;
-        }
-        .dropdown-container a:hover {
-            background-color: #007bff;
-            text-decoration: none;
-        }
-        .dropdown-btn:focus {
-            outline: none;
         }
         .content {
             margin-left: 250px;
@@ -109,9 +90,14 @@
         .form-inline button {
             flex-shrink: 0;
         }
-        .form-label {
-            margin-right: 10px;
-            font-weight: bold;
+        .btn-sm {
+            padding: 5px 10px;
+        }
+        .dropdown-btn {
+            width: 100%;
+        }
+        .dropdown-container a {
+            padding: 5px 20px;
         }
     </style>
 </head>
@@ -122,7 +108,7 @@
 </nav>
 
 <div class="sidebar">
-    <a href="{% url 'dashboard' %}">Dashboard</a>
+    <a href="{% url 'dashboard' %}">Dashboard</a>     
     <div>
         <a href="{% url 'setor_manage' %}">Setores</a>       
     </div>
@@ -184,21 +170,18 @@
 
 <div class="content">
     <div class="container">
+        <!-- Direção Section -->
         <div class="table-container">
-            <h2 class="mb-4">Lista de Centros de Custo Gestor</h2>
-            <div class="mb-4">
+            <h2 class="mb-4">Lista de Direções</h2>
+            <div class="form-inline">
                 <form method="post" class="w-100">
                     {% csrf_token %}
-                    <div class="form-group">
-                        <label class="form-label" for="id_nome">Nome:</label>
-                        {{ gestor_form.nome }}
-                    </div>
-                    <button type="submit" class="btn btn-primary w-30">Adicionar Centro de Custo Gestor</button>
+                    {{ direcao_form.as_p }}
+                    <button type="submit" name="direcao" class="btn btn-primary w-100 btn-sm">Adicionar Direção</button>
                 </form>
             </div>
             <div class="form-inline">
-                <label class="form-label" for="searchInputGestor">Pesquisar:</label>
-                <input type="text" id="searchInputGestor" class="form-control" placeholder="Pesquisar por nome...">
+                <input type="text" id="searchInputDirecao" class="form-control" placeholder="Pesquisar por nome...">
             </div>
             <table class="table table-striped mt-4">
                 <thead>
@@ -207,13 +190,13 @@
                         <th>Ações</th>
                     </tr>
                 </thead>
-                <tbody id="centrodecustogestorTable">
-                    {% for gestor in gestores %}
+                <tbody id="direcaoTable">
+                    {% for direcao in direcoes %}
                     <tr>
-                        <td>{{ gestor.nome }}</td>
+                        <td>{{ direcao.nome }}</td>
                         <td>
-                            <a href="{% url 'centrodecustogestor_update' gestor.pk %}" class="btn btn-warning btn-sm">Editar</a>
-                            <a href="{% url 'centrodecustogestor_delete' gestor.pk %}" class="btn btn-danger btn-sm">Deletar</a>
+                            <a href="{% url 'direcao_update' direcao.pk %}" class="btn btn-warning btn-sm">Editar</a>
+                            <a href="{% url 'direcao_delete' direcao.pk %}" class="btn btn-danger btn-sm">Deletar</a>
                         </td>
                     </tr>
                     {% endfor %}
@@ -221,42 +204,71 @@
             </table>
         </div>
 
+        <!-- Gerência Section -->
         <div class="table-container">
-            <h2 class="mb-4">Lista de Centros de Custo Solicitante</h2>
-            <div class="mb-4">
+            <h2 class="mb-4">Lista de Gerências</h2>
+            <div class="form-inline">
                 <form method="post" class="w-100">
                     {% csrf_token %}
-                    <div class="form-group">
-                        <label class="form-label" for="id_nome">Nome:</label>
-                        {{ solicitante_form.nome }}
-                    </div>
-                    <div class="form-group">
-                        <label class="form-label" for="id_centro_gestor">Centro Gestor:</label>
-                        {{ solicitante_form.centro_gestor }}
-                    </div>
-                    <button type="submit" class="btn btn-primary w-30">Adicionar Centro de Custo Solicitante</button>
+                    {{ gerencia_form.as_p }}
+                    <button type="submit" name="gerencia" class="btn btn-primary w-100 btn-sm">Adicionar Gerência</button>
                 </form>
             </div>
             <div class="form-inline">
-                <label class="form-label" for="searchInputSolicitante">Pesquisar:</label>
-                <input type="text" id="searchInputSolicitante" class="form-control" placeholder="Pesquisar por nome...">
+                <input type="text" id="searchInputGerencia" class="form-control" placeholder="Pesquisar por nome...">
             </div>
             <table class="table table-striped mt-4">
                 <thead>
                     <tr>
-                        <th>Centro Gestor</th>
-                        <th>Centro Solicitante</th>
+                        <th>Direção</th>
+                        <th>Nome</th>
                         <th>Ações</th>
                     </tr>
                 </thead>
-                <tbody id="centrodeustosolicitanteTable">
-                    {% for solicitante in solicitantes %}
+                <tbody id="gerenciaTable">
+                    {% for gerencia in gerencias %}
                     <tr>
-                        <td>{{ solicitante.centro_gestor.nome }}</td>
-                        <td>{{ solicitante.nome }}</td>
+                        <td>{{ gerencia.direcao.nome }}</td>
+                        <td>{{ gerencia.nome }}</td>
                         <td>
-                            <a href="{% url 'centrodeustosolicitante_update' solicitante.pk %}" class="btn btn-warning btn-sm">Editar</a>
-                            <a href="{% url 'centrodeustosolicitante_delete' solicitante.pk %}" class="btn btn-danger btn-sm">Deletar</a>
+                            <a href="{% url 'gerencia_update' gerencia.pk %}" class="btn btn-warning btn-sm">Editar</a>
+                            <a href="{% url 'gerencia_delete' gerencia.pk %}" class="btn btn-danger btn-sm">Deletar</a>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+
+        <!-- Coordenação Section -->
+        <div class="table-container">
+            <h2 class="mb-4">Lista de Coordenações</h2>
+            <div class="form-inline">
+                <form method="post" class="w-100">
+                    {% csrf_token %}
+                    {{ coordenacao_form.as_p }}
+                    <button type="submit" name="coordenacao" class="btn btn-primary w-100 btn-sm">Adicionar Coordenação</button>
+                </form>
+            </div>
+            <div class="form-inline">
+                <input type="text" id="searchInputCoordenacao" class="form-control" placeholder="Pesquisar por nome...">
+            </div>
+            <table class="table table-striped mt-4">
+                <thead>
+                    <tr>
+                        <th>Gerência</th>
+                        <th>Nome</th>
+                        <th>Ações</th>
+                    </tr>
+                </thead>
+                <tbody id="coordenacaoTable">
+                    {% for coordenacao in coordenacoes %}
+                    <tr>
+                        <td>{{ coordenacao.gerencia.nome }}</td>
+                        <td>{{ coordenacao.nome }}</td>
+                        <td>
+                            <a href="{% url 'coordenacao_update' coordenacao.pk %}" class="btn btn-warning btn-sm">Editar</a>
+                            <a href="{% url 'coordenacao_delete' coordenacao.pk %}" class="btn btn-danger btn-sm">Deletar</a>
                         </td>
                     </tr>
                     {% endfor %}
@@ -270,9 +282,9 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script>
-    document.getElementById('searchInputGestor').addEventListener('keyup', function() {
+    document.getElementById('searchInputDirecao').addEventListener('keyup', function() {
         var searchValue = this.value.toLowerCase();
-        var rows = document.querySelectorAll('#centrodecustogestorTable tr');
+        var rows = document.querySelectorAll('#direcaoTable tr');
         rows.forEach(function(row) {
             var nome = row.cells[0].textContent.toLowerCase();
             if (nome.includes(searchValue)) {
@@ -283,9 +295,22 @@
         });
     });
 
-    document.getElementById('searchInputSolicitante').addEventListener('keyup', function() {
+    document.getElementById('searchInputGerencia').addEventListener('keyup', function() {
         var searchValue = this.value.toLowerCase();
-        var rows = document.querySelectorAll('#centrodeustosolicitanteTable tr');
+        var rows = document.querySelectorAll('#gerenciaTable tr');
+        rows.forEach(function(row) {
+            var nome = row.cells[1].textContent.toLowerCase();
+            if (nome.includes(searchValue)) {
+                row.style.display = '';
+            } else {
+                row.style.display = 'none';
+            }
+        });
+    });
+
+    document.getElementById('searchInputCoordenacao').addEventListener('keyup', function() {
+        var searchValue = this.value.toLowerCase();
+        var rows = document.querySelectorAll('#coordenacaoTable tr');
         rows.forEach(function(row) {
             var nome = row.cells[1].textContent.toLowerCase();
             if (nome.includes(searchValue)) {
