--- a/contract/templates/setor_manage.html
+++ b/contract/templates/setor_manage.html
@@ -43,6 +43,12 @@
             background-color: #414a4c;
             padding-left: 15px;
         }
+        .dropdown-btn:focus {
+            outline: none;
+        }
+        .dropdown-container a {
+            box-shadow: none !important;
+        }
         .content {
             margin-left: 250px;
             padding: 20px;
@@ -98,6 +104,10 @@
         }
         .dropdown-container a {
             padding: 5px 20px;
+        }
+        .form-label {
+            margin-right: 10px;
+            font-weight: bold;
         }
     </style>
 </head>
