ajuste em no menu de index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -91,15 +91,51 @@
                       <a href="../demo1/index.html">
                         <span class="sub-item">Dashboard 1</span>
                       </a>
-                    </li>
+                    </li>                               
+                  </ul>
+                </div>
+              </li>  
+                
+              <!-- Contratos Section -->
+              <li class="nav-item">
+                <a data-bs-toggle="collapse" href="#contracts" class="collapsed" aria-expanded="false">
+                  <i class="fas fa-file-contract"></i>
+                  <p>Contratos</p>
+                  <span class="caret"></span>
+                </a>
+                <div class="collapse" id="contracts">
+                  <ul class="nav nav-collapse">
                     <li>
-                      <a href="../demo1/index.html">
-                        <span class="sub-item">Dashboard 2</span>
+                      <a href="">
+                        <span class="sub-item">Lista de Contratos</span>
                       </a>
                     </li>
                     <li>
-                      <a href="../demo1/index.html">
-                        <span class="sub-item">Dashboard 3</span>
+                      <a href="">
+                        <span class="sub-item">Adicionar Contrato</span>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </li>
+
+              <!-- Auxílios Section -->
+              <li class="nav-item">
+                <a data-bs-toggle="collapse" href="#auxilios" class="collapsed" aria-expanded="false">
+                  <i class="fas fa-hand-holding-heart"></i>
+                  <p>Auxílios</p>
+                  <span class="caret"></span>
+                </a>
+                <div class="collapse" id="auxilios">
+                  <ul class="nav nav-collapse">
+                    <li>
+                      <a href="">
+                        <span class="sub-item">Lista de Auxílios</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="">
+                        <span class="sub-item">Adicionar Auxílio</span>
                       </a>
                     </li>
                   </ul>
@@ -114,7 +150,7 @@
               <li class="nav-item">
                 <a data-bs-toggle="collapse" href="#base">
                   <i class="fas fa-layer-group"></i>
-                  <p>Base</p>
+                  <p>Setores</p>
                   <span class="caret"></span>
                 </a>
                 <div class="collapse" id="base">
@@ -170,7 +206,7 @@
               <li class="nav-item">
                 <a data-bs-toggle="collapse" href="#sidebarLayouts">
                   <i class="fas fa-th-list"></i>
-                  <p>Sidebar Layouts</p>
+                  <p>Centros</p>
                   <span class="caret"></span>
                 </a>
                 <div class="collapse" id="sidebarLayouts">
@@ -191,7 +227,7 @@
               <li class="nav-item">
                 <a data-bs-toggle="collapse" href="#forms">
                   <i class="fas fa-pen-square"></i>
-                  <p>Forms</p>
+                  <p>Colaboradores</p>
                   <span class="caret"></span>
                 </a>
                 <div class="collapse" id="forms">
