--- a/templates/index.html
+++ b/templates/index.html
@@ -668,7 +668,7 @@
         </div>
         {% block 'conteudo' %}
 
-        {% endblock 'conteudo' %}
+        {% endblock %}
         <footer class="footer">
           <div class="container-fluid d-flex justify-content-between">
             <nav class="pull-left">
