ajuste menu lateral

--- a/templates/index.html
+++ b/templates/index.html
@@ -243,7 +243,7 @@
               <li class="nav-item">
                 <a data-bs-toggle="collapse" href="#tables">
                   <i class="fas fa-table"></i>
-                  <p>Tables</p>
+                  <p>Linhas Orçamentarias</p>
                   <span class="caret"></span>
                 </a>
                 <div class="collapse" id="tables">
@@ -263,8 +263,8 @@
               </li>
               <li class="nav-item">
                 <a data-bs-toggle="collapse" href="#maps">
-                  <i class="fas fa-map-marker-alt"></i>
-                  <p>Maps</p>
+                  <i class="fas fa-coins"></i>
+                  <p>Orçamentos</p>
                   <span class="caret"></span>
                 </a>
                 <div class="collapse" id="maps">
@@ -285,7 +285,7 @@
               <li class="nav-item">
                 <a data-bs-toggle="collapse" href="#charts">
                   <i class="far fa-chart-bar"></i>
-                  <p>Charts</p>
+                  <p>Remanejamento</p>
                   <span class="caret"></span>
                 </a>
                 <div class="collapse" id="charts">
@@ -303,24 +303,11 @@
                   </ul>
                 </div>
               </li>
-              <li class="nav-item">
-                <a href="widgets.html">
-                  <i class="fas fa-desktop"></i>
-                  <p>Widgets</p>
-                  <span class="badge badge-success">4</span>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="../../documentation/index.html">
-                  <i class="fas fa-file"></i>
-                  <p>Documentation</p>
-                  <span class="badge badge-secondary">1</span>
-                </a>
-              </li>
+              
               <li class="nav-item">
                 <a data-bs-toggle="collapse" href="#submenu">
                   <i class="fas fa-bars"></i>
-                  <p>Menu Levels</p>
+                  <p>Aditivos</p>
                   <span class="caret"></span>
                 </a>
                 <div class="collapse" id="submenu">
