ajuste em contratos

--- a/templates/index.html
+++ b/templates/index.html
@@ -106,12 +106,12 @@
                 <div class="collapse" id="contracts">
                   <ul class="nav nav-collapse">
                     <li>
-                      <a href="">
+                      <a href="{% url 'contrato-list' %}">
                         <span class="sub-item">Lista de Contratos</span>
                       </a>
                     </li>
                     <li>
-                      <a href="">
+                      <a href="{% url 'novo-contrato' %}">
                         <span class="sub-item">Adicionar Contrato</span>
                       </a>
                     </li>
@@ -588,7 +588,7 @@
               </ul>
             </nav>
             <div class="copyright">
-              2024, Empresa Maranhense de Administração Portuaria | EMAP              
+              2024, Empresa Maranhense de Administração Portuária | EMAP              
             </div>
             <div>
               Desenvolvido por Núcleo de Dados              
