--- a/contract/templates/contratos/contrato_confirm_delete.html
+++ b/contract/templates/contratos/contrato_confirm_delete.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Confirmar Exclusão</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
+{% extends 'index.html' %}
+
+{% block 'conteudo' %}
+
 <div class="container mt-5">
     <h1>Confirmar Exclusão</h1>
     <p>Tem certeza de que deseja excluir o contrato "{{ contrato }}"?</p>
@@ -16,5 +11,5 @@
         <a href="{% url 'contrato_list' %}" class="btn btn-secondary">Cancelar</a>
     </form>
 </div>
-</body>
-</html>
+
+{% endblock %}
